--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 0.7.2 (2021-01-20)
+--------------------------
+Migrate to GitHub Actions (#58)
+Update copyright for 2021 (#59)
+Don't create temporary key by default in static push (#56)
+
 Version 0.7.1 (2020-04-22)
 --------------------------
 Provide server response in static push errors (#54)
