Prepare for 0.8.0 release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,29 @@
+Version 0.8.0 (2021-08-27)
+--------------------------
+Use hocon format for the deploy configuration file (#83)
+Add option to generate schema lists (#63)
+Fail s3cp and push when a schema has invalid metadata (#13)
+Add check metadata-path check for static generate command (#43)
+Provide meaningful error messages on unexpected Iglu Registry responses (#21)
+Remove SLF4J warnings from stderr (#75)
+Bump specs2 to 4.12.3 (#74)
+Zip igluctl binary before attaching to github release (#62)
+Bump sbt to 1.5.5 (#73)
+Bump iglu-scala-client to 1.1.1 (#72)
+Bump scalacheck to 1.15.4 (#71)
+Bump kind-projector to 0.13.0 (#70)
+Remove unused json-schema-validator dependency (#79)
+Bump circe to 0.14.1 (#80)
+Remove javax xml dependencies (#78)
+Bump schema-ddl to 0.14.1 (#77)
+Bump doobie to 0.13.4 (#76)
+Bump fs2 to 2.5.9 (#69)
+Bump scalaj to 2.4.2 (#68)
+Bump decline to 1.4.0 (#67)
+Bump cats-effect to 2.5.3 (#66)
+Bump scala compiler to 2.12.14 (#65)
+Bump aws sdk to version 2 (#64)
+
 Version 0.7.2 (2021-01-20)
 --------------------------
 Migrate to GitHub Actions (#58)
