--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+Version 0.9.0 (2022-05-22)
+--------------------------
+Option to filter schemas when linting (#86)
+Set content type to appplication/json when pushing schemas to S3 (#88)
+Remove unused --split-product-types flag (#105)
+Remove skip warnings option (#112)
+Fix warning message for ambiguous schemas (#87)
+Bump sbt to 1.5.8 (#104)
+
 Version 0.8.1 (2022-01-06)
 --------------------------
 Update 'action-zip' owner in 'cd' job (#97)
