--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.9.1 (2022-06-21)
+--------------------------
+Enable follow redirects (#124)
+
 Version 0.9.0 (2022-05-22)
 --------------------------
 Option to filter schemas when linting (#86)
