--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.10.2 (2023-01-26)
+---------------------------
+Remove info from README that is already in the Igluctl docs (#139)
+Allow empty skippedSchemas with igluctl deploy (#136)
+
 Version 0.10.1 (2022-08-11)
 --------------------------
 Ensure igluctl static push works when iglu server url has a path (#130)
