--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.11.3 (2023-06-07)
+---------------------------
+Bump schema-ddl to 0.19.2 allow redshift numeric type narrowing (#163)
+
 Version 0.11.2 (2023-06-06)
 ---------------------------
 Crosscheck should detect drifting schema versions when table has incorrect schema version (#162)
