--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.12.0 (2024-01-19)
+---------------------------
+Bump schema-ddl to 0.21.0 (#170)
+Add static verify-redshift command (#168)
+
 Version 0.11.3 (2023-06-07)
 ---------------------------
 Bump schema-ddl to 0.19.2 allow redshift numeric type narrowing (#163)
