--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.12.1 (2024-02-14)
+---------------------------
+Bump schema-ddl to 0.22.0 (#173)
+
 Version 0.12.0 (2024-01-19)
 ---------------------------
 Bump schema-ddl to 0.21.0 (#170)
