Prepare for 0.12.2 release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.12.2 (2024-02-16)
+---------------------------
+Bump schema-ddl to 0.22.1 (#176)
+
 Version 0.12.1 (2024-02-14)
 ---------------------------
 Bump schema-ddl to 0.22.0 (#173)
